# proctoru-xblock

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py
proctoru/: api.py  models.py  proctoru.py  settings.py
proctoru/public/css/: custom_bootstrap.css
proctoru/static/html/: exam_arrived_proctoru.html  proctoru.html  reshedule_form_proctoru.html  shedule_form_proctoru.html
proctoru/static/js/src/: proctoru.js
