;;
;; FUN package
;;
[metadata]
name = proctoru-xblock
version = 1.1.2
description = ProctorU is an online proctoring company that allows a candidate to take their exam from home, this xBlock is for funmooc please check github.com/perpetualny/proctoru-xblock for english language support
long_description = file: README.md
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/proctoru-xblock
license= AGPL 3.0
keywords = Django, Open edX, MOOC, Xblock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
install_requires =
    XBlock
packages = find:
zip_safe = False

[options.entry_points]
xblock.v1 =
    proctoru = proctoru.proctoru:ProctorUXBlock

[options.extras_require]
dev =
    ddt
    mock
    unicodecsv==0.9.4
    wheel
# proctoru-xblock is supposed to work integrated in an Open edX instance where
# xblock-utils is already installed. xblock-utils is required by proctoru-xblock
# but cannot be defined as a base requirement as it is not published in PyPI. To
# avoid breaking our packaging CI, we define xblock-utils as an extra
# requirement labeled "edx".
edx =
    # xblock-utils' pinned release was checking out the following commit:
    # 581ed636c862b286002bb9a3724cc883570eb54c
    # Not sure it's still relevant, hence we do not pin xblock-utils dependency
    # to avoid upgrading Open edX instance installed release.
    xblock-utils
    xblock-utils2==0.3.0

[options.package_data]
proctoru =
    public/css/*.css
    public/images/*
    static/html/*.html
    static/js/src/*.js

[options.packages.find]
exclude =
    docs

[wheel]
universal = 1
